--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: "~/.foundry/cache"
-          key: foundry-${{ hashFiles('Makefile', 'foundry.toml') }}
+          key: foundry-${{ hashFiles('foundry.toml') }}
 
       - name: "💾 Foundry compilation cache"
         uses: actions/cache@v3
@@ -36,7 +36,7 @@ jobs:
           path: |
             cache
             out
-          key: ${{ github.base_ref || github.ref_name }}-foundry
+          key: foundry-${{ github.repository_id }}-${{ hashFiles('foundry.toml') }}
       
       - name: "🔒️ Run Slither"
         uses: crytic/slither-action@v0.3.0
